tests/rustdoc-ui/not-wf-ambiguous-normalization.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/not-wf-ambiguous-normalization.rs:14:6
   |
LL | impl<T> Allocator for DefaultAllocator {
   |      ^ unconstrained type parameter

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
